--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -8,6 +8,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="./assets/bootstrap/js/jquery.min.js"></script>
+  <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="./assets/bootstrap/js/popper.js"></script>
+  <script src="./assets/bootstrap/js/popper.min.js"></script>
   <script src="https://cdn.ckeditor.com/4.5.1/standard/ckeditor.js"></script>
 </head>
 
